# escctrl

./: Package.resolved  Package.swift  README.md  justfile  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
Resources/: Info.plist  escctrl.icns
Sources/escctrl/: Agent.swift  CLI.swift  CapsLockTracker.swift  Client.swift  ControlProtocol.swift  ControlSocket.swift  Hidutil.swift  KeyboardEngine.swift  Keycodes.swift  Log.swift  LoginItem.swift  Paths.swift  Permissions.swift  Settings.swift  UnixSocket.swift  Updater.swift  main.swift
Tests/escctrlTests/: CapsLockTrackerTests.swift
scripts/: bundle.sh
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: diag.rs  hidutil.rs  lib.rs  main.rs  permissions.rs
src-tauri/src/keyboard/: engine.rs  keycodes.rs  mod.rs  state.rs
