[package]
name = "escctrl"
version = "1.0.4"
description = "Caps Lock → Ctrl (hold) / Escape (tap)"
authors = ["Omar Shaarawi"]
edition = "2021"

[lib]
name = "escctrl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-store = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
core-foundation = "0.10"
